--- a/site/templates/twig/quotes/quote/quote-notes.twig
+++ b/site/templates/twig/quotes/quote/quote-notes.twig
@@ -31,7 +31,7 @@
 					<div class="col">{{ note.invoice }}</div>
 					<div class="col">{{ note.acknowledgement }}</div>
 					<div class="col">
-						<button type="button" class="btn btn-light" data-toggle="collapse" data-target="#notes-{{ note.line }}-{{ note.form }}" aria-controls="collapseExample">
+						<button type="button" class="btn btn-light btn-sm" data-toggle="collapse" data-target="#notes-{{ note.line }}-{{ note.form }}" aria-controls="collapseExample">
 							<i class="fa fa-eye" aria-hidden="true"></i> Show
 						</button>
 					</div>
