--- a/site/templates/twig/quotes/quote/notes/qnotes-list.twig
+++ b/site/templates/twig/quotes/quote/notes/qnotes-list.twig
@@ -10,7 +10,7 @@
 					<div class="col">Acknowledgment</div>
 				</div>
 			</div>
-			<div class="col-3">Edit</div>
+			<div class="col-3"></div>
 		</div>
 	</div>
 	{% if notes.count > 0 %}
