--- a/site/templates/twig/sales-orders/sales-order/header.twig
+++ b/site/templates/twig/sales-orders/sales-order/header.twig
@@ -66,22 +66,22 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="row">
-					<div class="col-sm-7">Items on Order</div>
+					<div class="col-sm-7">Items on Order:</div>
 					<div class="col-sm-5 text-right">{{ order.count_items() }}</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-7">Has Tracking</div>
+					<div class="col-sm-7">Has Tracking:</div>
 					<div class="col-sm-5 text-right">{{ order.has_tracking() ? 'Yes' : 'No' }}</div>
 				</div>
 				{% if config.request_date_header() %}
 					<div class="row">
-						<div class="col-sm-7">Request Date</div>
+						<div class="col-sm-7">Request Date:</div>
 						<div class="col-sm-5 text-right">{{ order.date_requested ? order.date_requested|convertdate : '' }}</div>
 					</div>
 				{% endif %}
 				<div class="row">
 					<div class="col-sm-7">Subtotal:</div>
-					<div class="col-sm-5 text-right">$ {{ order.subtotal_nontax|currency }}</div>
+					<div class="col-sm-5 text-right">$ {{ order.subtotal_tax|currency }}</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-7">Shipping:</div>
@@ -98,23 +98,23 @@
 			</div>
 			<div class="col-sm-6">
 				<div class="row">
-					<div class="col-sm-7">Status</div>
+					<div class="col-sm-7">Status:</div>
 					<div class="col-sm-5 text-right">{{ order.status()|capitalize }}</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-7">Cust PO</div>
+					<div class="col-sm-7">Cust PO:</div>
 					<div class="col-sm-5 text-right">{{ order.custpo }}</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-7">Release #</div>
+					<div class="col-sm-7">Release #:</div>
 					<div class="col-sm-5 text-right">{{ order.releasenumber }}</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-7">Shipvia</div>
+					<div class="col-sm-7">Shipvia:</div>
 					<div class="col-sm-5 text-right">{{ order.shipvia }}</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-7">Terms Code</div>
+					<div class="col-sm-7">Terms Code:</div>
 					<div class="col-sm-5 text-right">{{ order.termscode }}</div>
 				</div>
 				<div class="row">
