--- a/site/templates/twig/sales-orders/sales-order/notes/list.twig
+++ b/site/templates/twig/sales-orders/sales-order/notes/list.twig
@@ -5,7 +5,7 @@
 			<div class="col">Pack Ticket</div>
 			<div class="col">Invoice</div>
 			<div class="col">Acknowledgment</div>
-			<div class="col">Edit</div>
+			<div class="col"></div>
 		</div>
 	</div>
 	{% if notes.count > 0 %}
