Use alerts to save changes if leaving

--- a/site/templates/twig/sales-orders/sales-order/edit/edit-form.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/edit-form.twig
@@ -19,10 +19,10 @@
 	</div>
 
 	<div class="d-flex w-100 justify-content-between mt-4">
-		<button type="submit" class="btn btn-success">
+		<button type="submit" class="btn btn-success save-header">
 			 <i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
-		
+
 		<button type="submit" class="btn btn-info" name="exit" value="unlock-order">
 			 <i class="fa fa-floppy-o" aria-hidden="true"></i> Save and <i class="fa fa-sign-out" aria-hidden="true"></i> Exit
 		</button>
