--- a/site/templates/twig/sales-orders/sales-order/edit/js/js.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/js/js.twig
@@ -30,7 +30,7 @@ $(function () {
 		$('#ajax-modal').find('.modal-body').load(href);
 	});
 });
-
+{% include 'sales-orders/sales-order/edit/js/classes.js.twig' %}
 {% include 'sales-orders/sales-order/edit/js/header.js.twig' %}
 {% include 'sales-orders/sales-order/edit/js/items.js.twig' %}
 {% include 'sales-orders/sales-order/edit/edit-item/.js.twig' %}
