--- a/site/templates/twig/util/bootstrap/form/select-simple.twig
+++ b/site/templates/twig/util/bootstrap/form/select-simple.twig
@@ -7,7 +7,7 @@
 
 	{% for value, label in tinput.options %}
 		{% set value = tinput.haskeys ? value : label %}
-		<option value="{{ value }}" {{ value == tinput.value ? 'selected'}}>
+		<option value="{{ value }}" {{ value == tinput.value ? 'selected' : ''}}>
 			{{ tinput.showvalue ? value ~ ' - ' }} {{ tinput.capitalizelabels ? label|capitalize : label }}
 		</option>
 	{% endfor %}
