--- a/site/templates/twig/sales-orders/search-form.twig
+++ b/site/templates/twig/sales-orders/search-form.twig
@@ -9,7 +9,7 @@
 	</div>
 </div>
 
-<div id="orders-search-div" class="{{ input.get.text('filter') is empty ? 'collapse' : ''}}">
+<div id="orders-search-div" class="collapse {{ input.get.offsetExists('filter') == false ? 'show' : ''}}">
 	<div class="card mb-3">
 		<div class="card-body">
 			<form action="" method="get" class="remove-empty-fields" submit-empty="false">
@@ -98,7 +98,7 @@
 				<div class="d-flex w-100 justify-content-between">
 					<div>
 						<button class="btn btn-success" type="submit">
-							<i class="fa fa-filter" aria-hidden="true"></i> Filter
+							<i class="fa fa-filter" aria-hidden="true"></i> Apply Filter
 						</button>
 					</div>
 					<div>
