USE jqv: 'true' for itemid validation

--- a/site/templates/twig/cart/lookup/js.twig
+++ b/site/templates/twig/cart/lookup/js.twig
@@ -23,7 +23,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('#additemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
