--- a/site/templates/twig/items/cxm/xref/form/js.twig
+++ b/site/templates/twig/items/cxm/xref/form/js.twig
@@ -209,7 +209,9 @@ $(function() {
 					remote: {
 						url: '{{ page.jsonapiURL('inv/validate/itemid/') }}',
 						type: "get",
-						data: {}
+						data: {
+							jqv: 'true'
+						}
 					}
 				{% endif %}
 			},
