--- a/site/templates/twig/items/mxrfe/xref/form/js.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/js.twig
@@ -157,7 +157,9 @@ $(function() {
 				remote: {
 					url: '{{ page.jsonapiURL('inv/validate/itemid/') }}',
 					type: "get",
-					data: {}
+					data: {
+						jqv: 'true'
+					}
 				}
 			},
 			unitofm: {
