--- a/site/templates/twig/mki/kim/kit/component/js.twig
+++ b/site/templates/twig/mki/kim/kit/component/js.twig
@@ -64,7 +64,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('input[name=component]').val()
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
