--- a/site/templates/twig/purchase-orders/purchase-order/edit/item/js.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/item/js.twig
@@ -95,7 +95,8 @@ $(function () {
 					data: {
 						itemID: function() {
 							return $('#edititemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
