--- a/site/templates/twig/sales-orders/sales-order/edit/lookup/js.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/lookup/js.twig
@@ -29,7 +29,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('#additemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
