--- a/site/templates/twig/warehouse/inventory/print-item-label/provalley/js.twig
+++ b/site/templates/twig/warehouse/inventory/print-item-label/provalley/js.twig
@@ -64,7 +64,9 @@ $(function() {
 				remote: {
 					url: '{{ page.jsonapiURL('inv/validate/itemid/') }}',
 					type: "get",
-					data: {}
+					data: {
+						jqv: 'true'
+					}
 				}
 			},
 			productiondate: {
