--- a/site/templates/twig/warehouse/po-amend/po/item/js.twig
+++ b/site/templates/twig/warehouse/po-amend/po/item/js.twig
@@ -87,7 +87,8 @@ $(function () {
 					data: {
 						itemID: function() {
 							return $('#edititemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
