--- a/site/templates/twig/cart/lookup/provalley/js.twig
+++ b/site/templates/twig/cart/lookup/provalley/js.twig
@@ -25,7 +25,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('#additemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
