--- a/site/templates/twig/purchase-orders/purchase-order/edit/lookup/js.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/lookup/js.twig
@@ -21,7 +21,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('#additemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
