--- a/site/templates/twig/quotes/quote/edit/lookup/js.twig
+++ b/site/templates/twig/quotes/quote/edit/lookup/js.twig
@@ -27,7 +27,8 @@ $(function() {
 					data: {
 						itemID: function() {
 							return $('#additemID').val();
-						}
+						},
+						jqv: 'true'
 					}
 				}
 			},
