--- a/site/templates/twig/items/upcx/form/form.twig
+++ b/site/templates/twig/items/upcx/form/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ page.fullURL.getUrl() }}" method="POST" id="upc-item-form">
+<form action="{{ page.fullURL.getUrl() }}" method="POST" id="upc-xref-form">
 	<input type="hidden" name="action" value="update-upcx">
 
 	<div class="row">
