--- a/site/templates/twig/items/upcx/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/upcx/form/js/classes/Inputs.js.twig
@@ -9,32 +9,11 @@ class UpcxInputs {
 	}
 
 	constructor() {
-		this.id = 'vxm-item-form',
+		this.id = 'upc-xref-form',
 		this.form = $('#' + this.id),
-		this.vendorid      = this.form.find('input[name=vendorID]'),
-		this.vendoritemid  = this.form.find('input[name=vendoritemID]'),
-		this.itemid        = this.form.find('input[name=itemID]'),
-		this.kit           = this.form.find('select[name=iskit]'),
-		this.listprice     = this.form.find('input[name=listprice]'),
-		this.eachlistprice = this.form.find('input[name=eachlistprice]'),
-		this.uom           = this.form.find('select[name=uom_purchase]'),
-		this.ordercode     = this.form.find('select[name=po_ordercode]'),
-		this.ordercodevalidated = this.form.find('input[name=po_ordercode_validated]'),
-		this.cost = {
-			base: this.form.find('input[name=unitcost_base]'),
-		}
-		this.margin = {
-			base: this.form.find('input[name=unitmargin_base]'),
-		},
-		this.updateitmcost = this.form.find('input[name=update_itm_cost]')
+		this.upc               = this.form.find('input[name=upc]'),
+		this.itemid            = this.form.find('input[name=itemID]'),
+		this.primary           = this.form.find('select[name=primary]'),
+		this.primaryValidated  = this.form.find('input[name=valid_primary]')
 	}
-
-	updateAllUnitMargins() {
-		var inputs = VxmInputs.getInstance();
-
-		$(".unit-row").each(function(index) {
-			inputs.updateUnitMargin($(this));
-		});
-	}
-
 }
