--- a/site/templates/twig/items/upcx/form/js.twig
+++ b/site/templates/twig/items/upcx/form/js.twig
@@ -1,15 +1,12 @@
 {% include 'items/upcx/form/js/classes.js.twig' %}
 
 $(function() {
-	var form_upc = $('#upc-item-form');
-	var input_itemid = form_upc.find('input[name=itemID]');
-	var input_upc = form_upc.find('input[name=upc]');
-	var input_primary = form_upc.find('select[name=primary]');
-	var input_validatedprimary = form_upc.find('input[name=valid_primary]');
 	var modal_ajax = $('#ajax-modal');
 
-	var alert   = UpcxAlerts.getInstance();
-	var server  = UpcxRequests.getInstance();
+	var alert    = UpcxAlerts.getInstance();
+	var server   = UpcxRequests.getInstance();
+	var configs  = UpcxConfigs.getInstance();
+	var formUpcx = UpcxForm.getInstance();
 
 /* =============================================================
 	Event Functions
@@ -17,30 +14,47 @@ $(function() {
 	$("body").on("change", "input[name=upc]", function(e) {
 		var input = $(this);
 
-		server.validateUpc(input.val(), function(exists) {
-			if (exists) {
-				alert.xrefExists(input.val(), function(editXref)  {
-					var url = URI();
-					if (editXref) {
-						url.setQuery('upc', input.val());
-					}
-					window.location.href = url.toString();
-				});
-			}
-		});
+		if (configs.allowDuplicateUpcs === false) {
+			server.validateUpc(input.val(), function(exists) {
+				if (exists) {
+					alert.upcExists(input.val(), function(editXref)  {
+						var url = URI();
+						if (editXref) {
+							url.setQuery('upc', input.val());
+						}
+						window.location.href = url.toString();
+					});
+				}
+			});
+		}
 	});
 
 	$("body").on("change", "input[name=itemID]", function(e) {
 		var input = $(this);
-		server.getItm(input.val(), function(item) {
-			if (item) {
-				$('.item-description').text(item.description);
-			}
-		});
+
+		if (configs.allowDuplicateUpcs === true) {
+			var upc = formUpcx.inputs.upc.val()
+
+			server.validateXref(upc, input.val(), function(exists) {
+				if (exists) {
+					alert.xrefExists(upc, input.val(), function(editXref)  {
+						var url = URI();
+						if (editXref) {
+							url.setQuery('upc', upc);
+							url.setQuery('itemID', input.val());
+						}
+						window.location.href = url.toString();
+					});
+				}
+				if (exists === false) {
+					UpcxForm.getInstance().updateItmDescription();
+				}
+			});
+		}
 	});
 
 	$("body").on("change", "select[name=primary]", function(e) {
-		input_validatedprimary.val('false');
+		formUpcx.inputs.primaryValidated.val('false');
 	});
 
 /* =============================================================
@@ -51,6 +65,7 @@ $(function() {
 		var modal = $(this);
 		var url = button.data('lookupurl');
 
+		modal.attr('data-input', button.data('input'));
 		modal.find('.modal-title').text(button.attr('title'));
 		modal.resizeModal('xl');
 		modal.find('.modal-body').loadin(url, function() {});
@@ -60,8 +75,9 @@ $(function() {
 		e.preventDefault();
 		var button = $(this);
 		var itemID = button.data('itemid');
-		input_itemid.val(itemID).change();
-		modal_ajax.modal('hide');
+		var modal  = button.closest('.modal');
+		$(modal.attr('data-input')).val(itemID).change();
+		modal.modal('hide');
 	});
 
 	$("body").on('submit', '#ajax-modal form', function(e) {
@@ -84,87 +100,95 @@ $(function() {
 /* =============================================================
 	Validation Functions
 ============================================================= */
-	form_upc.validate({
-		errorClass: "is-invalid",
-		validClass: "is-valid",
-		rules: {
-			qty: {required: true},
-			upc: {
-				required: true,
-				remote: {
-					url: '{{ page.jsonapiURL('inv/validate/upcx/upc/') }}',
-					type: "get",
-					data: {
-						jqv: 'true',
-						new: function() {
-							var isNew = $('input[name=upc]').data('new');
-							return isNew;
+
+formUpcx.inputs.form.validate({
+	errorClass: "is-invalid",
+	validClass: "is-valid",
+	rules: {
+		qty: {required: true},
+		upc: {
+			required: true,
+			remote: {
+				url: '{{ page.jsonapiURL('inv/validate/upcx/upc/xref/') }}',
+				type: "get",
+				data: {
+					jqv: 'true',
+					new: function() {
+						var isNew = $('input[name=upc]').data('new');
+						return isNew;
+					},
+					itemID: function() {
+						var configs = UpcxConfigs.getInstance();
+						if (configs.allowDuplicateUpcs) {
+							return $('input[name=itemID]').val() ? $('input[name=itemID]').val() : 'false';
 						}
+						return 'false';
 					}
 				}
-			},
-			itemID: {
-				required: true,
-				remote: {
-					url: '{{ page.jsonapiURL('inv/validate/itemid/') }}',
-					type: "get",
-					data: {
-						jqv: 'true',
-					}
-				}
-			},
-		},
-		messages: {
-			uom: "Please choose a Unit of Measure",
-			qty: "Please Enter Qty of Eaches for this UPC",
-		},
-		errorPlacement: function(error, element) {
-			error.insertAfter(element).addClass('invalid-feedback');
-		},
-		submitHandler: function(form) {
-			$('#loading-modal').modal('show');
-
-			var formdata = $(form).serializeArray().reduce(function(obj, item) {
-				obj[item.name] = item.value;
-				return obj;
-			}, {});
-
-
-			if (formdata['action'] == 'update-upcx') {
-				validate_primary(function(canSubmit) {
-					$('#loading-modal').modal('hide');
-					if (canSubmit) {
-						$('<input type="hidden" name="action" value="update-upcx">').appendTo($(form));
-						form.submit();
-					}
-				});
-			} else {
-				form.submit();
 			}
+		},
+		itemID: {
+			required: true,
+			remote: {
+				url: '{{ page.jsonapiURL('inv/validate/itemid/') }}',
+				type: "get",
+				data: {
+					jqv: 'true',
+				}
+			}
+		},
+	},
+	messages: {
+		uom: "Please choose a Unit of Measure",
+		qty: "Please Enter Qty of Eaches for this UPC",
+	},
+	errorPlacement: function(error, element) {
+		error.insertAfter(element).addClass('invalid-feedback');
+	},
+	submitHandler: function(form) {
+		$('#loading-modal').modal('show');
+
+		var formdata = $(form).serializeArray().reduce(function(obj, item) {
+			obj[item.name] = item.value;
+			return obj;
+		}, {});
+
+
+		if (formdata['action'] == 'update-upcx') {
+			validate_primary(function(canSubmit) {
+				$('#loading-modal').modal('hide');
+				if (canSubmit) {
+					$('<input type="hidden" name="action" value="update-upcx">').appendTo($(form));
+					form.submit();
+				}
+			});
+		} else {
+			form.submit();
 		}
-	});
+	}
+});
 
 	function validate_primary(callback) {
-		if (input_primary.val() == 'N') {
+		if (formUpcx.inputs.primary.val() == 'N') {
 			callback(true);
 		}
 
-
-		if (input_primary.val() == 'Y' && input_primary.data("primary") === true) {
+		if (formUpcx.inputs.primary.val() == 'Y' && formUpcx.inputs.primary.data("primary") === true) {
 			callback(true);
 			return true;
 		}
 
-		if (input_primary.val() == 'Y' && input_primary.data("primary") === false) {
-			server.validatePrimaryUpc(input_itemid.val(), input_upc.val(), function(isPrimary) {
+		if (formUpcx.inputs.primary.val() == 'Y' && formUpcx.inputs.primary.data("primary") === false) {
+			server.validatePrimaryUpc(formUpcx.inputs.itemid.val(), formUpcx.inputs.upc.val(), function(isPrimary) {
 				if (isPrimary === true) {
 					$('input[name=valid_primary]').val('true');
 					callback(true);
 					return true;
 				}
+
 				if (isPrimary === false) {
-					UpcxRequests.getInstance().getPrimaryUpc(input_itemid.val(), function(xref) {
-						UpcxAlerts.getInstance().changePrimary(input_itemid.val(), xref.upc, function(changePrimary) {
+					UpcxRequests.getInstance().getPrimaryUpc(formUpcx.inputs.itemid.val(), function(xref) {
+						UpcxAlerts.getInstance().changePrimary(formUpcx.inputs.itemid.val(), xref.upc, function(changePrimary) {
 							if (changePrimary === true) {
 								$('input[name=valid_primary]').val('true');
 							}
