--- a/site/templates/twig/items/upcx/form/form.twig
+++ b/site/templates/twig/items/upcx/form/form.twig
@@ -148,12 +148,12 @@
 						<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 					</button>
 					{% if upc.isNew() == false %}
-						<a href="{{ page.upcDeleteUrl(upc.upc)}}" class="btn btn-danger delete_button" data-delete="UPC {{ upc.upc }}">
+						<a href="{{ page.upcDeleteUrl(upc.upc, upc.itemid)}}" class="btn btn-danger delete_button" data-delete="UPC {{ upc.upc }}">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% endif %}
 				{% endif %}
-				<a href="{{ page.upcListUrl(upc.upc) }}" class="btn btn-warning">
+				<a href="{{ page.upcListUrl(upcx.getXrefKey(upc)) }}" class="btn btn-warning">
 					<i class="fa fa-times" aria-hidden="true"></i> Close
 				</a>
 			</div>
