--- a/site/templates/twig/items/upcx/form/display.twig
+++ b/site/templates/twig/items/upcx/form/display.twig
@@ -6,7 +6,7 @@
 					<strong>UPC:</strong>
 				</div>
 				<div class="col-sm-6">
-					{{ upc.upc ? upc.upc : 'NEW' }}
+					{{ upc.upc ? upc.upc : 'NEW' }} - {{ upc.itemid }}
 				</div>
 			</div>
 		{% endblock %}
