--- a/site/templates/twig/items/upcx/form/page.twig
+++ b/site/templates/twig/items/upcx/form/page.twig
@@ -8,7 +8,7 @@
 
 {% block return_links %}
 	<div class="mb-3">
-		<a href="{{ page.upcListUrl() }}" class="btn btn-primary">
+		<a href="{{ page.upcListUrl(upcx.getRecordlockerKey(upc)) }}" class="btn btn-primary">
 			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
 			Back to List
 		</a>
